# lornu.ai

./: .codeql-removal-note.md  .cursorrules  .env.example  .gitignore  AGENTS.md  BACKLOG.md  BACKLOG_GOOGLE_AI_STUDIO.md  CLAUDE.md  Cargo.toml  Claude.md  Dockerfile  Justfile  README.md  backlog.md  cloudflare.rs  content_filter.rs  gemini-backlog.md  gemini.rs  index.html  justfile  main.rs  mod.rs  package.json  playwright.config.ts  run-test.mjs  secrets.json.example  temp.txt
.github/: BRANCH_SETUP.md  CODEOWNERS  copilot-instructions.md  system-instruction.md
.github/ISSUE_TEMPLATE/: codeowners-setup.md
.github/workflows/: actions-placeholder.yml  build-and-push-ecr.yml  codeql.yml.disabled  dagger-pipeline.yml  mod.rs
agents/cloudflare-dns/: Cargo.toml  README.md
agents/cloudflare-dns/src/: cloudflare.rs  lib.rs  main.rs  secrets.rs
ai-agents/ai-agent-pr-comment/: Cargo.toml  Dockerfile  README.md
ai-agents/ai-agent-pr-comment/src/: main.rs
ai-agents/ai-agent-pr-rebase/: package.json
ai-agents/github-bot-tools-ts/: README.md  package.json
app-agents/ai-agent-pr-rebase/: index.ts  package.json
ci/: build-ci-image.ts  cloudflare_tool.test.ts  crossplane-bootstrap.ts  dagger-task.yaml  dagger.ts  generate-tekton-workflow.ts  generate-tekton.ts  generate-workflow.ts  lornu-ai-pipeline.yaml  main.ts  secrets.example.json  sync_secrets.ts  versions.ts
ci/tekton/: event-listener-flux.yaml  flux-alert-tekton.yaml  flux-gitrepository.yaml  flux-provider-tekton.yaml  flux-receiver.yaml  flux-webhook-secret.yaml  kustomization.yaml  pipeline-build-promote.yaml  pipeline-cloud-promote.yaml  pipeline-dagger.yaml  pipelinerun-build-promote-template.yaml  pipelinerun-promote-template.yaml  pipelinerun-template.yaml  task-build-image-artifact.yaml  task-cloud-promote-artifact.yaml  task-cloud-promote.yaml  task-dagger-pipeline.yaml  tekton-promoter-sa.yaml  tekton-triggers-rbac.yaml  trigger-binding-flux.yaml  trigger-template-dagger.yaml
docs/: BRANCH_CLEANUP.md  CROSS_PROJECT_SECRETS.md  GH_CLI_TOKEN_SETUP.md  GITHUB_BOT_SETUP.md  GITHUB_TOKEN_SETUP.md  RETROACTIVE_SETUP_PR.md  TRUNK_BASED_WORKFLOW.md
examples/: agentmemory-claim.yaml  rust-cross-project-secrets.rs
infra/: README.md  agent-deploy.ts  agent-sandbox.ts  apply.ts  cdk8s.yaml  main.ts  package.json  plan.ts
infra/ci/: apply_ssa.ts
infra/constructs/: github-team.ts  index.ts
infra/k8s/dns-sync-agent/: deployment.yaml
infra/kustomize/agentmemory/: agentmemory-composition-azure.yaml  agentmemory-xrd.yaml  kustomization.yaml
infra/kustomize/apps/: engine-deployment.yaml  gateway-deployment.yaml  kustomization.yaml  namespace.yaml
infra/kustomize/crossplane/: kustomization.yaml
infra/scripts/: cleanup.ts
infra/src/: ai_agent_core.ts  base.ts  preview.ts
infra/src/constructs/: agent-claims.ts  agent-xrds.ts  index.ts  preview-workload.ts
infrastructure/ai-agent-pr-comment/: configmap.yaml  kustomization.yaml  namespace.yaml  secret.yaml
infrastructure/forgejo/: flux-kustomization.yaml  kustomization.yaml
infrastructure/forgejo/app/: deployment.yaml  ingress.yaml  kustomization.yaml  pvc.yaml  service.yaml
infrastructure/forgejo/db/: deployment.yaml  pvc.yaml  service.yaml
infrastructure/forgejo/eso/: externalsecret-db.yaml  kustomization.yaml  secretstore.yaml  serviceaccount.yaml
observability/: README.md
observability/rust/: Cargo.toml  README.md
observability/rust/src/: main.rs
observability/ts/: README.md  server.ts
scripts/: automated-github-bot-setup.ts  find-github-app-installation-id.ts  setup-branch-protection.ts  setup-cross-project-secrets.sh  setup-github-bot.ts
services/: Cargo.toml
services/agent-worker/: Cargo.toml
services/agent-worker/src/: main.rs
services/engine/: Cargo.toml  Dockerfile.dns-sync  cloudbuild.yaml
services/engine/src/: lib.rs  main.rs
services/engine/src/agents/: cherry_pick.rs  executor.rs  lifecycle.rs  mod.rs
services/engine/src/agents/cyber/: mod.rs  remediator.rs  types.rs  zero_trust.rs
services/engine/src/agents/dns_sync/: cloudflare.rs  cloudflare_permissions.rs  mod.rs  orchestrator.rs  providers.rs  types.rs
services/engine/src/agents/service_discovery/: discovery.rs  experience.rs  identity.rs  mod.rs  reconciler.rs
services/engine/src/agents/ssh_key/: generator.rs  mod.rs  secret_manager.rs  types.rs
services/engine/src/tools/: cloudflare.rs  github.rs  mod.rs
services/gateway/: Cargo.toml
services/gateway/src/: main.rs
services/github-bot/: Cargo.toml
services/github-bot/src/: auth.rs  lib.rs  pr.rs
src/app/: App.tsx
src/app/components/: AgentOrchestrator.tsx  CTASection.tsx  DashboardPreview.tsx  FeaturesSection.tsx  Footer.tsx  Header.tsx  HeroSection.tsx  PricingSection.tsx  UseCasesSection.tsx
src/styles/: fonts.css  theme.css
verification/: spec.ts
