[workspace]
resolver = "2"
members = [
    "engine",
    "gateway",
    "agent-worker",
]

[workspace.package]
edition = "2021"
license = "Apache-2.0"
authors = ["Lornu AI <contact@lornu.ai>"]

[workspace.dependencies]
tokio = { version = "1.35", features = ["full"] }
axum = { version = "0.7", features = ["tokio", "json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
thiserror = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["json", "env-filter"] }
uuid = { version = "1.6", features = ["v4", "serde"] }

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
strip = true
