[package]
name = "lornu-engine"
version = "0.1.0"
edition = "2021"
description = "Lornu AI Engine - Agent orchestration and execution"
authors = ["Lornu AI <contact@lornu.ai>"]
license = "Apache-2.0"

[dependencies]
# Async runtime
tokio = { version = "1.35", features = ["full"] }

# Kubernetes client for Crossplane claim creation
kube = { version = "0.88", features = ["runtime", "derive"] }
k8s-openapi = { version = "0.21", features = ["v1_29"] }

# HTTP server
axum = { version = "0.7", features = ["tokio", "json"] }
tower = "0.5"
tower-http = { version = "0.5", features = ["cors", "trace"] }

# HTTP client for external APIs
reqwest = { version = "0.12", features = ["json"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["json", "env-filter"] }

# UUID
uuid = { version = "1.6", features = ["v4", "serde"] }

# Async utilities
futures = "0.3"
async-trait = "0.1"

# URL encoding for API calls
urlencoding = "2.1"

# Google Cloud SDK for Secret Manager (ADC-based auth)
gcloud-sdk = { version = "0.25", features = ["google-cloud-secretmanager-v1"], optional = true }

# Cloudflare API
cloudflare = { version = "0.12", optional = true }

# GitHub API (for team management)
octocrab = { version = "0.41", optional = true }

# Base64 encoding for Secret Manager payloads
base64 = "0.22"

# XML parsing for AWS STS responses
quick-xml = { version = "0.31", features = ["serialize"] }

# OpenAI client for embeddings (optional - for cherry-pick agent)
async-openai = { version = "0.24", optional = true }

# Qdrant vector database client (optional - for embeddings)
qdrant-client = { version = "1.12", optional = true }

# Git operations (optional - for cherry-pick agent)
git2 = { version = "0.19", optional = true }

# SSH key generation (optional - for ssh-key-agent)
ssh-key = { version = "0.6", features = ["alloc", "ed25519", "rand_core"], optional = true }
rand = { version = "0.8", optional = true }

# Chrono for timestamps
chrono = { version = "0.4", features = ["serde"] }

# CLI argument parsing
clap = { version = "4.5", features = ["derive", "env"] }

# Pin transitive dependency to version compatible with Rust 1.85
# (home 0.5.12 requires Rust 1.88)
home = "=0.5.9"

[features]
default = ["full"]
full = ["gcloud-sdk", "cloudflare", "octocrab", "async-openai", "qdrant-client", "git2", "ssh-key", "rand"]
# dns-sync includes all deps for now (lib.rs exports modules that use them)
dns-sync = ["gcloud-sdk", "cloudflare", "octocrab", "async-openai", "qdrant-client", "git2"]
# ssh-key-gen: SSH key generation and GCP Secret Manager storage
ssh-key-gen = ["gcloud-sdk", "ssh-key", "rand"]

[[bin]]
name = "engine"
path = "src/main.rs"

[[bin]]
name = "dns-sync-agent"
path = "src/bin/dns_sync_agent.rs"

[[bin]]
name = "ssh-key-agent"
path = "src/bin/ssh_key_agent.rs"
required-features = ["ssh-key-gen"]

[dev-dependencies]
# Testing utilities
tempfile = "3.15"

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
strip = true
