[package]
name = "lornu-gateway"
version = "0.1.0"
edition = "2021"
description = "Lornu AI Gateway - API routing and authentication"
authors = ["Lornu AI <contact@lornu.ai>"]
license = "Apache-2.0"

[dependencies]
tokio = { version = "1.35", features = ["full"] }
axum = { version = "0.7", features = ["tokio", "json"] }
reqwest = { version = "0.12", features = ["json"] }
tower = "0.5"
tower-http = { version = "0.5", features = ["cors", "trace", "auth"] }
hyper = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
thiserror = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["json", "env-filter"] }
jsonwebtoken = "9.2"
uuid = { version = "1.6", features = ["v4", "serde"] }

[[bin]]
name = "gateway"
path = "src/main.rs"
